feat: Preview live edit mode

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -783,6 +783,7 @@
 	"version.changes": "Changed version",
 	"version.compare": "Compare versions",
 	"version.current": "Current version",
+	"version.edit": "Edit live",
 	"version.latest": "Latest version",
 	"versionInformation": "Version information",
 
